fix(addon-editor): support overflow content of table (#2985)

--- a/projects/addon-editor/components/editor-socket/editor-socket.component.less
+++ b/projects/addon-editor/components/editor-socket/editor-socket.component.less
@@ -18,6 +18,12 @@
         word-break: break-word;
         line-height: normal;
     }
+
+    /* stylelint-disable-next-line */
+    .tableWrapper,
+    .tui-table-wrapper {
+        overflow-x: auto;
+    }
 }
 
 /* stylelint-disable-next-line */
